--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
   "dependencies": {
     "cheerio": "^1.0.0-rc.3",
     "request": "^2.88.2"
+  },
+  "devDependencies": {
+    "eslint": "^7.6.0"
   }
 }
